version 1.7
	* log4j is no longer used by the Cobertura classes that are
	  accessed by instrumented Java code.  This means you will
	  not need to add log4j to your project's classpath in order
	  to use Cobertura (but log4j is still required when
	  instrumenting and reporting).
	* Upgrade from asm 2.0 to asm 2.1.  No code changes were
	  needed.

version 1.6
	* Can now use multiple filesets in the cobertura-instrument
	  task (Thanks to Grzegorz Lukasik).
	* Can now use multiple filesets in the cobertura-report task
	  (Thanks to Jeremy Thomerson, Grzegorz Lukasik and James Seigel).
	* No longer using the Java version of GNU GetOpt
	* Fixed a bug where the total number of classes displayed in
	  the HTML report included anonymous classes when it should
	  not have.

version 1.5
	* Shortened the header shown when running Cobertura (Thanks
	  to Jarkko Viinamäki).
	* Don't save the data file twice after instrumenting.
	* Print a warning when running cobertura-report with a
	  data file that does not contain information from the
	  instrument step.
	* When instrumenting, you can now specify a zip, jar, war,
	  ear or sar file and Cobertura will instrument any classes
	  inside of the archive.  You must explicity give the name
	  of the archive when instrumenting--giving the name of the
	  directory containing the archive will not work (Thanks to
	  Grzegorz Lukasik).
	* Fixed a bug where the class list in the HTML reports did
	  not show multiple classes with the same name, but in
	  different packages.
	* Add a timestamp and version number to all HTML reports.
	* Add a timestamp and version number to all XML reports.
	* Add the combined line-rate and branch-rate for all
	  packages to all XML reports.
	* Fixed the merge task (Thanks to Mark Sinke).
	* The check task now supports checking against a project's
	  total branch and line coverage rates (Thanks to Nathan
	  Wilson).
	* The check ant task now allows you to fail the ant build,