@@ -1,0 +1,1 @@
+java -cp `dirname $0`/cobertura.jar net.sourceforge.cobertura.merge.Main $*
